apollo-router/src/router/event/snapshots/uhg_custom_appollo_roouter__router__event__schema__tests__schema_by_url_fallback@logs.snap
---
source: apollo-router/src/router/event/schema.rs
assertion_line: 422
expression: yaml
---
- fields:
    http.response.status_code: 400
    url.full: "[url.full]"
  level: WARN
  message: failed to fetch supergraph schema
- fields:
    http.response.status_code: 400
    url.full: "[url.full]"
  level: WARN
  message: failed to fetch supergraph schema
